Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62292

[Windows] Crash with ScrollView + TextArea

XMLWordPrintable

    • abc60b14620253f61b0c0f1dff1ca0935b18761c

      Steps to reproduce the issue

      1. Run attached test application in Debug mode
      2. Close the window

      -> It will crash with the attached stack trace

      Notes:
      The issue reproduces only with MSVC 2013 and 2015 in debug build.

        1. full_stack.txt
          15 kB
        2. QTBUG-62292.zip
          1 kB
        3. Stack.png
          Stack.png
          403 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            kileppal Kimmo Leppälä
            Votes:
            4 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes