Fix a crash with ScrollView + TextArea

TextArea was not cleaning up its geometry change listener on the
Flickable it was attached to.

Task-number: QTBUG-62292
Change-Id: I31223d4fcf0b46235b18e8eb05bab686a32f5481
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>